replace installOnDevice script with npm package

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "apk": "./scripts/apk.sh",
     "configGradle": "configGradle",
     "configGradleSetup": "configGradleSetup",
-    "installOnDevice": "./scripts/installOnDevice.sh",
+    "installOnDevice": "installOnDevice",
     "installHooks": "./scripts/hooks.sh",
     "lint": "eslint native shared --ignore-path .gitignore"
   },
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^6.8.0",
     "eslint-plugin-standard": "^2.0.1",
     "react-native-gradle-config": "^2.0.0",
+    "react-native-install-on-device": "^1.0.1",
     "react-native-keep-awake": "^1.0.7",
     "replace": "^0.3.0"
   }
